--- a/index.html
+++ b/index.html
@@ -65,6 +65,235 @@
             </button>
         </div>
     </div>
+     <!-- Job Cards Container -->
+<section id="allCards" class="flex flex-col gap-6 w-full">
+
+    <!-- Card 1: Mobile First Corp -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">Mobile First Corp</h2>
+                <p class="text-gray-500 text-sm mt-1">React Native Developer</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Remote</span> <span>•</span> <span>Full-time</span> <span>•</span> <span>$130,000 - $175,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase ">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 2: WebFlow Agency -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start ">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">WebFlow Agency</h2>
+                <p class="text-gray-500 text-sm mt-1">Web Designer & Developer</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Los Angeles, CA</span> <span>•</span> <span>Part-time</span> <span>•</span> <span>$80,000 - $120,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase ">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Create stunning web experiences for high-profile clients. Must have portfolio and experience with modern web design trends.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 3: CloudSphere Tech -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">CloudSphere Tech</h2>
+                <p class="text-gray-500 text-sm mt-1">Backend Engineer (Node.js)</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Remote</span> <span>•</span> <span>Contract</span> <span>•</span> <span>$95 - $130 /hr</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase ">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Scalable cloud infrastructure design using Node.js and AWS. Focus on high-availability systems and database optimization.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 4: Pixel Perfect Studio -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">Pixel Perfect Studio</h2>
+                <p class="text-gray-500 text-sm mt-1">Senior UI/UX Designer</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>New York, NY</span> <span>•</span> <span>Full-time</span> <span>•</span> <span>$110,000 - $150,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase ">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Leading the design system for enterprise-grade SaaS products. Strong proficiency in Figma and user-centric design methodologies.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 5: FinTech Innovators -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">FinTech Innovators</h2>
+                <p class="text-gray-500 text-sm mt-1">Full Stack Developer (MERN)</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Remote</span> <span>•</span> <span>Full-time</span> <span>•</span> <span>$140,000 - $185,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Building secure financial transaction modules. Experience with encryption and real-time data processing is a must.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 6: Green Terra Org -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">Green Terra Org</h2>
+                <p class="text-gray-500 text-sm mt-1">Frontend Developer (Vue.js)</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Hybrid</span> <span>•</span> <span>Full-time</span> <span>•</span> <span>$90,000 - $115,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase ">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Developing climate monitoring dashboards using Vue 3 and D3.js. Help us visualize data to save the planet.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 7: Swift Logic AI -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start ">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">Swift Logic AI</h2>
+                <p class="text-gray-500 text-sm mt-1">Machine Learning Engineer</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Remote</span> <span>•</span> <span>Full-time</span> <span>•</span> <span>$160,000 - $210,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase ">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Deploying Large Language Models (LLMs) for customer support automation. Strong Python and PyTorch skills required.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+    <!-- Card 8: Alpha CyberSecurity -->
+    <div class="card bg-white border border-gray-100 shadow-sm p-8 rounded-xl flex flex-row justify-between items-start ">
+        <div class="space-y-4 flex-1">
+            <div>
+                <h2 class="text-xl font-bold text-[#1e3a8a]">Alpha CyberSecurity</h2>
+                <p class="text-gray-500 text-sm mt-1">Security Analyst</p>
+            </div>
+            <div class="flex items-center gap-2 text-sm text-[#94a3b8]">
+                <span>Austin, TX</span> <span>•</span> <span>Full-time</span> <span>•</span> <span>$100,000 - $135,000</span>
+            </div>
+            <div>
+                <span class="bg-[#eff6ff] text-[#2563eb] text-[10px] font-bold px-2 py-1 rounded uppercase">Not Applied</span>
+            </div>
+            <p class="text-[#475569] text-sm leading-relaxed max-w-3xl">
+                Conducting penetration tests and vulnerability assessments for financial institutions. CISSP certification preferred.
+            </p>
+            <div class="flex gap-3 pt-2">
+                <button class="btn btn-xs btn-outline btn-success border-[#22c55e] text-[#22c55e] hover:bg-[#22c55e] hover:text-white px-4 font-bold rounded-md uppercase">Interview</button>
+                <button class="btn btn-xs btn-outline btn-error border-[#ef4444] text-[#ef4444] hover:bg-[#ef4444] hover:text-white px-4 font-bold rounded-md uppercase">Rejected</button>
+            </div>
+        </div>
+        <div class="ml-4">
+            <button class="p-1 hover:bg-gray-50 rounded transition-colors">
+                <img src="./images/Vector.png" alt="Delete" class="w-4 h-4 opacity-30 hover:opacity-100">
+            </button>
+        </div>
+    </div>
+
+</section>
+
 </main>
 
 </body>
