--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@
             </button>
         </div>
     </div>
+
+    <!-- Empty Message -->
+    <div id="empty-message" class="text-center mt-10">
+        <div class="text-5xl mb-4 ">
+            <img src="./images/jobs.png" alt="" class="mx-auto">
+        </div>
+        <h2 class="text-xl font-semibold">No Jobs Available</h2>
+        <p class="text-gray-500">There are no jobs in this category.</p>
+    </div>
 </main>
 
 </body>
