empty message id er class e hidden add korchi

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </div>
 
     <!-- Empty Message -->
-    <div id="empty-message" class="text-center mt-10">
+    <div id="empty-message" class="hidden text-center mt-10">
         <div class="text-5xl mb-4 ">
             <img src="./images/jobs.png" alt="" class="mx-auto">
         </div>
