Updated jobs and remove jobs from text right class

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <h4 class="text-3xl font-bold text-indigo-800">Available Jobs</h4>
             <div class="text-right">
                 <span id="tab-job-count" class="text-[16px] font-medium text-gray-500">8</span>
-                <span class="text-gray-500 text-[16px] font-medium"> Jobs</span>
+                <span class="text-gray-500 text-[16px] font-medium"></span>
             </div>
         </div>
 
         <div class="flex p-1 bg-gray-100 rounded-lg gap-2 w-fit mb-8">
-            <button id="all-filter-btn" onclick="toggleStyle('all-filter-btn')" class="px-6 py-2.5 rounded-md text-sm font-bold bg-blue-500 text-white">All Jobs</button>
+            <button id="all-filter-btn" onclick="toggleStyle('all-filter-btn')" class="px-6 py-2.5 rounded-md text-sm font-bold bg-blue-500 text-white">All</button>
             <button id="interview-filter-btn" onclick="toggleStyle('interview-filter-btn')" class="px-6 py-2.5 rounded-md text-sm font-bold bg-white">Interview</button>
             <button id="rejected-filter-btn" onclick="toggleStyle('rejected-filter-btn')" class="px-6 py-2.5 rounded-md text-sm font-bold bg-white">Rejected</button>
         </div>
