--- a/index.html
+++ b/index.html
@@ -153,11 +153,10 @@
                 </div>
         </section>
 
-        <!-- Dynamic Render Section
-        <section id="filtered-section" class="hidden flex flex-col gap-6"></section> -->
+
         <section id="filtered-section" class="hidden flex flex-col gap-6"></section>
-        <!-- Empty Message -->
-        <div id="empty-message" class="hidden mx-auto text-center mt-20">
+
+        <div id="empty-message" class="hidden mx-auto text-center mt-20 space-y-6">
             <img src="./images/jobs.png" class="mx-auto mb-2 w-24 ">
             <h2 class="text-xl font-semibold text-gray-400">No Jobs Available</h2>
             <p class="text-xl text-gray-400 text-light">Check back soon for new job opportunities</p>
