--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
 
-    <hr class="w-[1000px] mx-auto my-5">
+    <hr class="w-[1000px] w-full mx-auto my-5 ">
 
     <main class="w-[90%] md:w-[80%] mx-auto pb-20">
         <div class="flex justify-between items-center mb-6">
